# CleanHistoryPlugin

./: CMakeLists.txt  README.MD  clean_history_plugin.cpp
include/eosio/clean_history_plugin/: clean_history_plugin.hpp
